# serenity-weather-bot

./: Cargo.toml  README.md  Shuttle.toml
src/: commands.rs  main.rs  types.rs  weather.rs
