[package]
name = "lumenlimitless-serenity-weather-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.24.0"
shuttle-runtime = "0.24.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-secrets = "0.24.0"
tokio = "1.26.0"
tracing = "0.1.37"
poise = "0.5.5"
shuttle-poise = "0.24.0"
serde = "1.0.183"
reqwest = { version = "0.11.18", features = ["json"] }
thiserror = "1.0.47"
